Normalize authenticated page layout shell

--- a/frontend/export.html
+++ b/frontend/export.html
@@ -12,11 +12,13 @@
     </script>
 
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <link rel="stylesheet" href="operational_ui.css">
 </head>
-<body class="bg-gradient-to-b from-indigo-200 via-slate-100 to-white">
+<body class="ops-body">
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
-        <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
+        <main class="ops-main flex-1 min-w-0 overflow-x-auto space-y-6">
             <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Exports</h1>
             <p class="mb-4">Download transactions for a chosen period in your preferred format.</p>
             <section class="space-y-4">
