--- a/frontend/palette.html
+++ b/frontend/palette.html
@@ -11,11 +11,13 @@
   </script>
 
   <script src="https://cdn.tailwindcss.com"></script>
+
+    <link rel="stylesheet" href="operational_ui.css">
 </head>
-<body class="bg-gradient-to-b from-indigo-200 via-slate-100 to-white">
+<body class="ops-body">
   <div class="flex min-h-screen">
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
-    <main class="flex-1 p-6">
+    <main class="ops-main flex-1 min-w-0 overflow-x-auto">
       <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Palette Settings</h1>
 
       <div class="cards space-y-4">
