--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -12,15 +12,17 @@
     </script>
 
       <script src="https://cdn.tailwindcss.com"></script>
+
+    <link rel="stylesheet" href="operational_ui.css">
       <link rel="stylesheet" href="https://unpkg.com/tabulator-tables@6.3.0/dist/css/tabulator_simple.min.css">
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/highcharts-more.js"></script>
     <!-- Font Awesome icons loaded via menu.js -->
 </head>
-<body class="bg-gradient-to-b from-indigo-200 via-slate-100 to-white">
+<body class="ops-body">
 <div class="flex min-h-screen">
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
-    <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
+    <main class="ops-main flex-1 min-w-0 overflow-x-auto space-y-6">
         <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Projects</h1>
         <p class="mb-4">Review your planned projects, explore costs and compare their priorities.</p>
 
